added module-23 homework

--- a/module_22_cgi_server/materials/wsgi/nginx.conf
+++ b/module_22_cgi_server/materials/wsgi/nginx.conf
@@ -1,33 +1,68 @@
-user  www-data;
-worker_processes  auto;
+user  www-data; # Задаёт пользователя и группу, с правами которого будут работать рабочие процессы.
+                # Если группа не задана, то используется группа, имя которой совпадает с именем пользователя.
+                # по умолчанию: user nobody nobody
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+worker_processes  auto; # Задаёт число рабочих процессов.
+                        # Если затрудняетесь в выборе правильного значения, можно начать с установки его равным
+                        # числу процессорных ядер (значение “auto” пытается определить его автоматически).
 
+error_log  /var/log/nginx/error.log notice; # Конфигурирует запись в лог.
+                                            # Первый параметр задаёт файл, который будет хранить лог.
+                                            # Второй параметр определяет уровень лога и может принимать одно из
+                                            # следующих значений: debug, info, notice, warn, error, crit, alert
+                                            # или emerg.
 
+pid  /var/run/nginx.pid; # Задаёт файл, в котором будет храниться номер (PID) главного процесса.
+
+# Предоставляет контекст конфигурационного файла, в котором указываются директивы, влияющие на обработку соединений.
 events {
-    worker_connections  1024;
+    worker_connections  1024; # Задаёт максимальное число соединений, которые одновременно может открыть рабочий процесс
 }
 
+# Предоставляет контекст конфигурационного файла, в котором указываются директивы HTTP-сервера.
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include       /etc/nginx/mime.types; # Включает в конфигурацию другой файл или файлы, подходящие под заданную маску
+    default_type  application/octet-stream; # Задаёт MIME-тип ответов по умолчанию
 
+    # Задаёт формат лога.
+    # log_format название [escape=default|json|none] строка ...;
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access.log  main; # Задаёт путь, формат и настройки буферизованной записи в лог.
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile        on; # Разрешает или запрещает использовать sendfile() (системный вызов sendfile linux'a)
+    keepalive_timeout  65; # задаёт таймаут, в течение которого keep-alive соединение с клиентом не будет закрыто
+                           # со стороны сервера. Значение 0 запрещает keep-alive соединения с клиентами.
 
+    # Задаёт конфигурацию для виртуального сервера. Директивами listen описываются все адреса и порты,
+    # на которых нужно принимать соединения для этого сервера.
     server {
-        listen 80;
+        listen 80; # Задаёт адрес и порт для IP или путь для UNIX-сокета, на которых сервер будет принимать запросы.
+                   # Можно указать адрес и порт, либо только адрес или только порт.
+                   # UNIX-сокеты (0.8.21) задаются при помощи префикса “unix:”:
+                   #    listen unix:/var/run/nginx.sock;
+
+        # Устанавливает конфигурацию в зависимости от URI запроса.
         location / {
+            # uwsgi_param CONTENT_TYPE $content_type  # Задаёт параметр, который будет передаваться uwsgi-серверу.
+                                                      # В качестве значения можно использовать текст, переменные
+                                                      # и их комбинации
             include uwsgi_params;
-            uwsgi_pass unix:/run/uwsgi.sock;
+            uwsgi_pass unix:/run/uwsgi.sock; # Задаёт протокол и адрес uwsgi-сервера.
+                                             # Адрес может быть указан в виде доменного имени или IP-адреса, и порта
+                                             # или в виде пути UNIX-сокета:
+                                             #      uwsgi_pass unix:/tmp/uwsgi.socket;
         }
+
+        # location / {
+        #     index index.html;  # Определяет файлы, которые будут использоваться в качестве индекса.
+        #                        # В имени файла можно использовать переменные.
+        #     autoindex on;  # Разрешает или запрещает вывод листинга каталога.
+        # }
     }
 }
+
+# Определяет, будет ли nginx запускаться в режиме демона. Используется в основном для разработки.
 daemon off;
