--- a/module_22_cgi_server/homework/app/nginx.conf
+++ b/module_22_cgi_server/homework/app/nginx.conf
@@ -1,15 +1,11 @@
-
-user  nginx;
+user  www-data;
 worker_processes  auto;
-
 error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
+pid  /var/run/nginx.pid;
 
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
@@ -25,16 +21,19 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       80;
-        root   /usr/share/nginx/html;
+        listen 80;
 
         location / {
-            index index.html;
+            include uwsgi_params;
+            uwsgi_pass unix:/run/uwsgi.sock;
+            uwsgi_read_timeout 305;
         }
 
-        location /static/images/ {
-           autoindex on;
+        location /static/ {
+            root /;
+            autoindex on;
         }
     }
-
 }
+
+daemon off;
