--- a/module_27_postgres_migrations/hw/hw1/docker-compose.yml
+++ b/module_27_postgres_migrations/hw/hw1/docker-compose.yml
@@ -26,3 +26,6 @@ services:
     volumes:
       - ./postgres_db/:/var/lib/postgresql/data
       - ./postgresql.conf:/etc/postgresql/postgresql.conf
+
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    restart: always
