--- a/module_27_postgres_migrations/hw/hw1/docker-compose.yml
+++ b/module_27_postgres_migrations/hw/hw1/docker-compose.yml
@@ -2,35 +2,27 @@ version: '3.2'
 services:
 
   flask_app:
+    container_name: flask-app
     build:
       context: flask_app
     stop_signal: SIGKILL
     environment:
       - HOST=0.0.0.0
       - PORT=5000
-#      - POSTGRES_USER=${POSTGRES_USER}
-#      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-#      - '${FLASK_PORT}:5000'
-      - '5002:5000'
+      - '${FLASK_PORT}:5000'
 
-#  postgresql:
-#    image: postgres
-#
-#    environment:
-#      - POSTGRES_USER=${POSTGRES_USER}
-#      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-#      - POSTGRES_DB=${POSTGRES_DB}
-#    ports:
-#      - '${POSTGRES_PORT}:5432'
-#    volumes:
-#      - ./postgres_db/:/var/lib/postgresql/data
-#    configs:
-#      - source: postgres_config
-#        target: /var/lib/postgresql/data/postgresql.conf
-#
-#configs:
-#  postgres_config:
-#    file: ./postgresql.conf
+  postgresql:
+    container_name: postgresql
+    image: postgres
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - '${POSTGRES_PORT}:5432'
+    volumes:
+      - ./postgres_db/:/var/lib/postgresql/data
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
