homework from module-27 task-1 fix added

--- a/module_27_postgres_migrations/hw/hw1/docker-compose.yml
+++ b/module_27_postgres_migrations/hw/hw1/docker-compose.yml
@@ -25,4 +25,5 @@ services:
       - '${POSTGRES_PORT}:5432'
     volumes:
       - ./postgres_db/:/var/lib/postgresql/data
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+#      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./postgresql.conf:/var/lib/postgresql/data/postgresql.conf
