task-2, task-3 from module-27 homework added

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ dmypy.json
 
 /for_self_examination/
 /module_27_postgres_migrations/hw/hw1/postgres_db/
+/module_27_postgres_migrations/hw/hw2_3/postgres_db/
